<resources>
    <string name="app_name">WanAndroid</string>
    <string name="splash_default_time">3s</string>
    <string name="iv_drawer">侧边栏图片</string>
    <string name="back">返回</string>
    <string name="title_home">首页</string>
    <string name="knowledge">知识体系</string>
    <string name="navigation">导航</string>
    <string name="project">项目</string>
    <string name="close_drawer">关闭</string>
    <string name="open_drawer">打开</string>
    <string name="finished">已经到底了</string>
    <string name="login">去登陆</string>
    <string name="my_love">我的收藏</string>
    <string name="about_us">关于我们</string>
    <string name="setting">设置</string>
    <string name="user_name">请输入用户名</string>
    <string name="input_psw">请输入密码</string>
    <string name="input_psw_again">请确认密码</string>
    <string name="go_register">还没有账号？去注册</string>
    <string name="go_login">已有账号，去登陆</string>
    <string name="article_list">文章列表</string>
    <string name="out_login">退出登录</string>
    <string name="collect_list">收藏列表</string>
    <string name="clear_history">清空输入历史</string>
    <string name="title_search">搜索</string>
    <string name="please_input">请输入</string>
    <string name="history">历史记录</string>
</resources>
