<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.RegisterLoginActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_bg">

        <com.zyh.wanandroid.widgets.BaseToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:centerTextColor="@color/white"
            app:fillStatusBar="true"
            app:layout_constraintTop_toTopOf="parent"
            app:toolbarBackgroundColor="@color/colorPrimaryDark"
            app:toolbarHeight="48dp" />

        <TextView
            android:id="@+id/project_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            app:layout_constraintTop_toBottomOf="@id/project_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tet_user_name"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:hint="@string/user_name"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            app:layout_constraintTop_toBottomOf="@id/til_user_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tet_psw"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:hint="@string/input_psw"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_psw_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/til_psw">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tet_psw_again"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:hint="@string/input_psw_again"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:gravity="center_vertical"
            android:text="@string/go_register"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/til_psw_again" />

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent" />


        <android.support.v4.widget.ContentLoadingProgressBar
            android:id="@+id/loading_progress"
            style="?android:attr/progressBarStyleLargeInverse"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</layout>
