<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.SearchActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:src="@drawable/ic_back"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/search_bg"
                android:hint="@string/please_input"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textColor="@color/text_33"
                android:textColorHint="@color/text_66"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_search"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:gravity="center"
                android:text="@string/title_search"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="20dp"
            android:text="@string/history"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <android.support.design.internal.FlowLayout
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            app:itemSpacing="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_history"
            app:lineSpacing="12dp" />

        <TextView
            android:id="@+id/clear_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/history_bg"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/clear_history"
            android:textColor="@color/text_33"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/history" />
    </android.support.constraint.ConstraintLayout>
</layout>
