<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/colorPrimary" />

        <ImageView
            android:id="@+id/img_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/img_avatar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/login"
            android:textColor="@color/text_66"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_avatar" />

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="20dp"
            android:background="@color/text_99"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:id="@+id/item_collection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_item"
            android:drawableStart="@drawable/ic_collection_gray"
            android:drawableLeft="@drawable/ic_collection_gray"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawableRight="@drawable/ic_arrow_right"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:text="@string/my_love"
            android:textColor="@color/text_66"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/line1" />

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/text_99"
            app:layout_constraintTop_toBottomOf="@id/item_collection" />

        <TextView
            android:id="@+id/item_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_item"
            android:drawableStart="@drawable/ic_setting"
            android:drawableLeft="@drawable/ic_setting"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawableRight="@drawable/ic_arrow_right"
            android:drawablePadding="10dp"
            android:padding="12dp"
            android:text="@string/setting"
            android:textColor="@color/text_66"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/line2" />

        <View
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/text_99"
            app:layout_constraintTop_toBottomOf="@id/item_setting" />

        <TextView
            android:id="@+id/item_about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_item"
            android:drawableStart="@drawable/ic_about_us"
            android:drawableLeft="@drawable/ic_about_us"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawableRight="@drawable/ic_arrow_right"
            android:drawablePadding="10dp"
            android:padding="12dp"
            android:text="@string/about_us"
            android:textColor="@color/text_66"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/line3" />

        <View
            android:id="@+id/line4"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/text_99"
            app:layout_constraintTop_toBottomOf="@id/item_about_us" />

        <TextView
            android:id="@+id/item_out_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_item"
            android:drawableStart="@drawable/ic_about_us"
            android:drawableLeft="@drawable/ic_about_us"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawableRight="@drawable/ic_arrow_right"
            android:drawablePadding="10dp"
            android:padding="12dp"
            android:text="@string/out_login"
            android:textColor="@color/text_66"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/line4" />

        <View
            android:id="@+id/line5"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/text_99"
            app:layout_constraintTop_toBottomOf="@id/item_out_login" />

        <android.support.v4.widget.ContentLoadingProgressBar
            android:id="@+id/loading_progress"
            style="?android:attr/progressBarStyleLargeInverse"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</layout>